# Heartprinter

./: .gitignore  .gitmodules  LICENSE  README.md  TAGS.md
PCB_Designs/Init/: Init.PrjPcb  Init.PrjPcbStructure  start.SchDoc
STM32/: initProject.uvguix.desktop  initProject.uvoptx  initProject.uvprojx
STM32/.metadata/: .log4j2.xml  version.ini
STM32/oneMotorControl/: .cproject  .mxproject  .project  oneMotorControl Debug.launch  oneMotorControl.ioc
STM32/oneMotorControl/Debug/: makefile  objects.list  oneMotorControl.elf  oneMotorControl.list  oneMotorControl.map
Solidworks/: Distal Suction Base Posterior - first try.SLDPRT  Distal Suction Base Posterior - second try.SLDPRT  Distal Suction Base Posterior - third try.SLDPRT  E1.SLDPRT  E2_HW1.SLDPRT  E2_Quiz.SLDPRT  E3.SLDPRT  E3_HW1.SLDPRT  E3_HW2.SLDPRT  E4.SLDPRT  E4_HW1.SLDPRT  Motor_base_1.SLDPRT  New Distal Suction Base Posterior v1.SLDPRT  Proximal Suction Base - v9.SLDPRT  new Proximal Suction Base - v1.SLDPRT
Solidworks/ANDI_HP_CAD/: Proximal Suction Base - v10.SLDPRT  TS2_caseLid.SLDPRT  TS2_hinge.SLDPRT  TS_cable.SLDPRT  TS_case.SLDPRT  TS_guide.SLDPRT  TS_storage.SLDASM  attatch_thread_guideCENTER - Copy.SLDPRT  attatch_thread_guideV2 - MIRROR.SLDPRT  attatch_thread_guideV2.SLDPRT  bigSpacer.STL  collar_A3.SLDPRT  computer_adapter_left.SLDPRT  heartBaseSLDASM.SLDASM  pulley_adapter.SLDPRT  rigid_base_calibration.SLDPRT  shaft stand.SLDPRT
Solidworks/Cabinet/: Printable+Din+Rail+v2 v1.f3d  Printable+Din+Rail+v2 v1.stl  daq_cclamp_3b (v3~recovered).f3d  daq_cclamp_3b v4.stl  daq_cclamp_3t v2.f3d  daq_cclamp_3t v2.stl  din_mount_1 v4.f3d  din_mount_1 v4.stl  din_mount_cap_acdc v3.stl  din_mount_cap_mcb_powerdist v2.f3d  din_mount_cap_mcb_powerdist v2.stl  din_shelf_mount_2 v2.f3d  din_shelf_mount_2 v2.stl  front_panel_3 v4.f3d  front_panel_3 v4.step  powerdist_ground_mount v2.f3d  powerdist_ground_mount v2.stl  shelf_panel_2 v1.f3d  shelf_panel_2 v1.step  wt_shelf_mount_1 v1.f3d  wt_shelf_mount_1 v1.stl
Solidworks/Funnel/: funnel_panel v7.f3d  funnel_panel v7.step  general_load_cell_mount v3.f3d  general_load_cell_mount v3.stl  middle_pulley v3.f3d  middle_pulley v3.stl  middle_pulley_mount v3.f3d  middle_pulley_mount v3.stl  middle_pulley_shaft v1.f3d  middle_pulley_shaft v1.stl  motor_mount v3.f3d  motor_mount v3.stl  motor_shaft v5.f3d  motor_shaft v5.stl  side_pulley v5.f3d  side_pulley v5.stl  side_pulley_cap v2.f3d  side_pulley_cap v2.stl  side_pulley_mount v3.f3d  side_pulley_mount v3.stl
code/Cpp/: CMakeLists.txt  CMakeLists_bk.txt  CMakeLists_mtr.txt  Makefile  README.md  README.md   init  newfile.ini
code/Cpp/DXL_API/win64/Output/: dxl_x64_cpp.exp  dxl_x64_cpp.iobj  dxl_x64_cpp.ipdb  dxl_x64_cpp.lib
code/Cpp/DXL_API/win64/dxl_x64_cpp/: dxl_x64_cpp.vcxproj
code/Cpp/DXL_API/win64/dxl_x64_cpp/Release/dxl_x64_cpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  dxl_x64_cpp.lastbuildstate  dxl_x64_cpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
code/Cpp/Sample/: Sample.cpp  StdAfx.h  makefile64
code/Cpp/docs/: ARCHITECTURE.md  BUILD_GUIDE.md  HARDWARE_SETUP.md  STATE_MACHINE.md
code/Cpp/example/protocol2.0/fast_sync_read/: fast_sync_read.cpp
code/Cpp/example/protocol2.0/sync_read_write/: sync_read_write.cpp
code/Cpp/include/NIDAQmx/: NIDAQmx.h
code/Cpp/include/custom/: ATC3DG.h  Base.h  CTrackstar.h  Init.cpp.h  Init.h  LOG.h  Motor.h  NIDAQ.h  SharedMemoryManager.h  StdAfx.h  SystemController.h  init.h  resource.h
code/Cpp/src/: DynamixelSDK.h
code/Cpp/src/custom/: Base.cpp  CTrackstar.cpp  DAQmx.cpp  Init.cpp  LOG.cpp  Motor.cpp  NIDAQ.cpp  Sample.cpp  SharedMemoryManager.cpp  StdAfx.cpp  SystemController.cpp  cppreadpy.cpp  init.cpp  shared_memory_test.cpp
code/Cpp/src/dynamixel_sdk/: DynamixelSDK.h  group_bulk_read.cpp  group_bulk_write.cpp  group_fast_bulk_read.cpp  group_fast_sync_read.cpp  group_handler.cpp  group_sync_read.cpp  group_sync_write.cpp  packet_handler.cpp  port_handler.cpp  port_handler_arduino.cpp  port_handler_linux.cpp  port_handler_mac.cpp  port_handler_windows.cpp  protocol1_packet_handler.cpp  protocol2_packet_handler.cpp
code/Cpp/src/probe_position_validation/: position_validator.cpp
code/Cpp/src/probe_position_validation/tests/: test10_slightly_outside.txt  test1_valid_inside.txt  test2_invalid_outside.txt  test3_edge_case.txt  test4_3d_triangle.txt  test5_collinear.txt  test6_small_triangle.txt  test7_not_outside.txt  test8_large_scale.txt  test9_on_probe.txt
code/Cpp/trackstar_examples/Samples/GetSynchronousRecord Sample/: GetSynchronousRecordSample.cpp  makefile64  resource.h
code/Cpp/trackstar_examples/Samples/Sample/: Sample.cpp  Sample.h  Sample64  makefile64
code/Cpp/trackstar_examples/Samples/Sample2/: Sample2.cpp  Sample2.h  Sample2_64  StdAfx.h  makefile64  resource.h
code/Python/: PositionErrorCalculation.py  README.md  SubsituteMemoryBufferCpp.py  gen.py  gui_init.py  gui_main.py  input.txt  log_analysis.py  probe_vis.py  requirements.txt  shared_memory_read.py  testinput.txt  visualize_positions.py
code/Python/Unit_Testing/: FINAL_TEST_REPORT.md  README.md  __init__.py  test_breaking_cases.py  test_edge_cases.py  test_gui_components.py
code/Python/core/: __init__.py  compute.py
code/Python/gui/: __init__.py  main.py  test_interface.py
code/Python/test_gui/: README.md
code/Python/tools/: __init__.py  log_analysis.py  visualize_positions.py  visualize_runs_with_bases.py
code/logs/cpp/: log_20250903_143428.txt
init/: .mxproject  init.ioc
init/Core/Src/: main.c
init/MDK-ARM/: init.uvguix.desktop  init.uvoptx  init.uvprojx
init/MDK-ARM/init/: init.axf  init.build_log.htm  init.hex  init.htm  init.lnp  init.map  init_init.dep  main.d  stm32f1xx_hal.d  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.d  stm32f1xx_hal_rcc_ex.d  stm32f1xx_hal_tim.d  stm32f1xx_hal_tim_ex.d  (+2 more)
pcb_design/Init/: Constraints.xml
(+105 files in other folders)
